<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/guidance_nav_CO2"
        android:icon="@drawable/ic_co2"
        android:title="@string/nav_co2" />

    <item
        android:id="@+id/guidance_nav_humidity"
        android:icon="@drawable/ic_humidity"
        android:title="@string/nav_humidity" />

    <item
        android:id="@+id/guidance_nav_temperature"
        android:icon="@drawable/ic_temperature"
        android:title="@string/nav_temperature" />
</menu>