<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_guidance_co2_container">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/guidance_list_co2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/guidance_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/guidance_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_add"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>